# mycamera

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: focuser.hpp  image_sensor.hpp  live_viewer.hpp
src/: CMakeLists.txt  focuser.cpp  image_sensor.cpp  live_viewer.cpp
test/: CMakeLists.txt  main.cpp
